added web and sample autoconfiguration

--- a/pom.xml
+++ b/pom.xml
@@ -27,17 +27,9 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-        
 	<modules>
-	   <module>main</module>
+		<module>main</module>
+		<module>web</module>
 	</modules>
 
 </project>
